--- a/app/src/main/res/layout/random.xml
+++ b/app/src/main/res/layout/random.xml
@@ -4,17 +4,39 @@
     android:layout_height="match_parent"
     android:gravity="center"
     >
-    <TextView
-        android:text="Nhập giới hạn random top: "
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/editTextGioiHanTop"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="Nhập Min:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/editTextMin"
+            android:inputType="number"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="Nhập Max:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/editTextMax"
+            android:inputType="number"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/textViewNumberRandom"
-        android:text="0"
+        android:text="RandomNumber here"
+        android:layout_marginVertical="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Button
@@ -22,4 +44,5 @@
         android:text="Random"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
 </LinearLayout>
